--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "concurrently": "^7.2.1"
+    "concurrently": "^7.2.1",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
