--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "concurrently": "^7.2.1",
+    "i": "^0.3.7",
+    "postcss-cli": "^9.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-spotify-web-playback": "^0.9.2",
     "spotify-web-api-node": "^5.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24"
   }
 }
